adjust toolbar position to fix offscreen overflow

--- a/app/assets/stylesheets/shared/editor_toolbar.scss
+++ b/app/assets/stylesheets/shared/editor_toolbar.scss
@@ -8,7 +8,7 @@
     border-radius: 20px;
     box-shadow: 0 20px 30px 0 rgba(33,55,74,0.1);
     display: inline-flex;
-    left: 20%;
+    left: 6%;
     opacity: 0;
     padding: 0.25rem;
     position: absolute;
